add new flags