@@ -12,6 +12,37 @@ hide_table_of_contents: false
 
 First and foremost, I cannot be held responsible for any problems on your server as a result of these changes. This is still experimental and bugs can happen. No one has the same configuration, everything can vary from person to person.
 
+## Flags
+
+**Supported JDK assemblies:**
+
+*I recommend using OpenJDK 17*
+
+- [x] OpenJDK 8+
+- [x] Red Hat 8+
+- [x] Amazon 11+
+- [x] Azul 11+
+- [x] AdoptOpenJDK 11+
+- [ ] Oracle
+- [ ] SAP
+
+**Supported servers:**
+
+- [x] Vanilla
+- [x] Bukkit, Spigot, Paper ...
+- [x] Fabric
+- [x] Forge
+
+**Finished properties:**
+
+```java
+java -jar -server -Xms6G -Xmx6G -XX:+UseLargePages -XX:LargePageSizeInBytes=2M -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu -XX:+UseNUMA -XX:+AlwaysPreTouch -XX:-UseBiasedLocking -XX:+DisableExplicitGC -Dfile.encoding=UTF-8 launcher-airplane.jar --nogui
+```
+
+## Old flags
+
+If you want, you can still use old flags, but we don't recommend to use it on production server!
+
 **_For servers using 12GB of RAM or less:_**
 
 ```java
@@ -28,6 +59,6 @@ You shouldn't use more than 20GB of RAM, because G1GC is not designed for that. 
 
 [Post on DivineMC Blog](https://divinemc.bxteam.gq/blog/2022/12/30/Aikar-Flags)
 
-[Etil original GitHub repo](https://github.com/etil2jz/etil-minecraft-flags)
-
 And again, just note: I don't recommend using these flags on a production server. These flags are for testing purposes only. If you want to use these flags on a production server, you should know what you are doing.
+
+###### Last updated at 17 February 2023
